results/print-ir/expected/failure/resolver/missing_member.psy.out
Parsed OK
error: Member 'grade' does not exist in type 'Student'.
  --> tests/failure/resolver/missing_member.psy:7:1
   |
  7| s.grade = "A";
   | ^--- Here


Semantic analysis failed. Compilation stopped.
